--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -18,5 +18,6 @@
 @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/transitions";
+@import "bootstrap/scss/card";
 
 @import "bootstrap/scss/utilities/api";
