--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -15,7 +15,10 @@
 @import "bootstrap/scss/grid";
 @import "bootstrap/scss/helpers";
 
-@import "bootstrap/scss/forms";
+@import "bootstrap/scss/navbar";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/card";
 @import "bootstrap/scss/buttons";
 
 @import "bootstrap/scss/utilities/api";
