--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -19,6 +19,7 @@
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/card";
+@import "bootstrap/scss/forms";
 @import "bootstrap/scss/buttons";
 
 @import "bootstrap/scss/utilities/api";
