--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -15,8 +15,10 @@
 @import "bootstrap/scss/grid";
 @import "bootstrap/scss/helpers";
 
-
-@import "bootstrap/scss/forms";
+@import "bootstrap/scss/transitions";
 @import "bootstrap/scss/buttons";
+@import "bootstrap/scss/close";
+@import "bootstrap/scss/modal";
+@import "bootstrap/scss/offcanvas";
 
 @import "bootstrap/scss/utilities/api";
