--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -16,9 +16,6 @@
 @import "bootstrap/scss/helpers";
 
 @import "bootstrap/scss/transitions";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/close";
-@import "bootstrap/scss/modal";
-@import "bootstrap/scss/offcanvas";
+@import "bootstrap/scss/_forms";
 
 @import "bootstrap/scss/utilities/api";
