--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -21,5 +21,6 @@
 @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
 
 @import "bootstrap/scss/utilities/api";
